--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,62 @@
+:root {
+  --nav-padding: 30px
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#main {
+  display: flex;
+  gap: 10px;
+  box-sizing: border-box;
+  height: 100vh;
+  border: 2px solid black;
+  border-bottom: none;
+}
+
+#nav {
+  border-right: 2px solid black;
+  box-sizing: border-box;
+  padding: var(--nav-padding);
+  height: 100%;
+}
+
+#nav > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.navigation--links {
+  font-size: 1.25rem;
+}
+
+#nav > hr {
+  border-color: black;
+}
+
+#route-section {
+  padding: 30px 0;
+  box-sizing: border-box;
 }
