--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,12 +11,16 @@ a {
   color: #00b7ff;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
+h1 {
+  margin: 10px 0;
+}
+h2 {
+  margin: 8px 0;
+}
+h3 {
+  margin: 6px 0;
+}
+
 p {
   margin: 0;
 }
