--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,3 +64,15 @@ ul {
   padding: 30px 0;
   box-sizing: border-box;
 }
+
+.form {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+}
+
+.form > .form-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
