--- a/views/item/create.ejs
+++ b/views/item/create.ejs
@@ -1,28 +1,38 @@
 <h1>Create Item</h1>
 <form class="form" method="POST">
-    <div class="form-group">
-        <label for="name">Name:</label>
-        <input id="name" name="name" type="text" placeholder="Name of item" required="true" value=<%= item===undefined ? '' : item.name %>>
-    </div>
-    <div class="form-group">
-        <label for="description">Description:</label>
-        <input id="description" name="description" type="text" placeholder="Description of item" required="true" value=<%= item===undefined ? '' : item.description %>>
-    </div>
-    <div class="form-group">
-        <label for="price">Price (per kg):</label>
-        <input id="price" name="price" type="number" placeholder="Price of item" required="true" value=<%= item===undefined ? '' : item.price %>>
-    </div>
-    <div class="form-group">
-        <label for="numberInStock">Number of killograms in stock:</label>
-        <input id="numberInStock" name="numberInStock" type="number" placeholder="Stock of item" required="true" value=<%= item===undefined ? '' : item.numberInStock %>>
-    </div>
-    <div class="form-group">
-        <label for="category">Category:</label>
-        <select id="category" name="category">
-            <% for (let i in categories) { %>
-                <option value=<%= categories[i]._id %>><%= categories[i].name %></option>
-            <% } %>
-        </select>
-    </div>
-    <button type="submit" class="submit-button">Create Item</button>
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input id="name" name="name" type="text" placeholder="Name of item" required="true" value="<%= item===undefined ? '' : item.name %>">
+  </div>
+  <div class="form-group">
+    <label for="description">Description:</label>
+    <input id="description" name="description" type="text" placeholder="Description of item" required="true" value="<%= item===undefined ? '' : item.description %>">
+  </div>
+  <div class="form-group">
+    <label for="price">Price (per kg):</label>
+    <input id="price" name="price" type="number" placeholder="Price of item" required="true" value="<%= item===undefined ? '' : item.price %>">
+  </div>
+  <div class="form-group">
+    <label for="numberInStock">Number of killograms in stock:</label>
+    <input id="numberInStock" name="numberInStock" type="number" placeholder="Stock of item" required="true" value="<%= item===undefined ? '' : item.numberInStock %>">
+  </div>
+  <div class="form-group">
+    <label for="category">Category:</label>
+    <select id="category" name="category">
+      <% for (let i in categories) { %>
+      <option value=<%= categories[i]._id %>><%= categories[i].name %></option>
+      <% } %>
+    </select>
+  </div>
+  <button type="submit" class="submit-button">Create Item</button>
 </form>
+
+<% if (errors !== undefined) { %>
+<div class="errors">
+  <ul>
+    <% for (let i in errors) { %>
+    <li class="error">- <%= errors[i].msg %></li>
+    <% } %>
+  </ul>
+</div>
+<% } %>
