change "shop" to "grocery shop"

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<h1>Welcome to our shop!</h1>
+<h1>Welcome to our grocery shop!</h1>
 <div id="categories-list">
   <h3>Available Categories</h3>
   <ul>
