add update, delete links

--- a/views/category/detail.ejs
+++ b/views/category/detail.ejs
@@ -12,6 +12,10 @@
     <% } %>
   </ul>
 </div>
+<hr>
+<div class="manage-links">
+  <a href="/update">Update</a> <a href="/delete">Delete</a>
+</div>
 <style>
   #category-items {
     display: flex;
