--- a/views/item/detail.ejs
+++ b/views/item/detail.ejs
@@ -3,3 +3,7 @@
 <p>Category: <a href=<%= item.category.url %>><%= item.category.name %></a></p>
 <p>Price (per kg): <%= item.price %> 🪙</p>
 <p>Killograms available in stock: <%= item.numberInStock %>kg</p>
+<hr>
+<div class="manage-links">
+  <a href="/update">Update</a> <a href="/delete">Delete</a>
+</div>
