--- a/views/item/detail.ejs
+++ b/views/item/detail.ejs
@@ -5,5 +5,5 @@
 <p>Killograms available in stock: <%= item.numberInStock %>kg</p>
 <hr>
 <div class="manage-links">
-  <a href="/update">Update</a> <a href="/delete">Delete</a>
+  <a href="<%= item._id %>/update">Update</a> <a href="<%= item._id %>/delete">Delete</a>
 </div>
