supply title from fields

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         </ul>
       </nav>
       <section id="route-section">
-        <%- include(content, {...props}); %>
+        <%- include(content, {title, ...props}); %>
       </section>
     </main>
   </body>
