--- a/views/category/form.ejs
+++ b/views/category/form.ejs
@@ -1,4 +1,4 @@
-<h1>Create Category</h1>
+<h1><%= title %></h1>
 <form class="form" method="POST">
   <div class="form-group">
     <label for="name">Name:</label>
@@ -8,7 +8,7 @@
     <label for="description">Description:</label>
     <input id="description" name="description" type="text" placeholder="Description of category" required="true" value="<%= category===undefined ? '' : category.description %>">
   </div>
-  <button type="submit" class="submit-button">Create Category</button>
+  <button type="submit" class="submit-button"><%= title %></button>
 </form>
 
 <% if (errors !== undefined) { %>
