fix: point to correct urls

--- a/views/category/detail.ejs
+++ b/views/category/detail.ejs
@@ -18,7 +18,7 @@
 </div>
 <hr>
 <div class="manage-links">
-  <a href="<%= category._id %>/update">Update</a> <a href="<%= category._id %>/delete">Delete</a>
+  <a href="/category/<%= category._id %>/update">Update</a> <a href="/category/<%= category._id %>/delete">Delete</a>
 </div>
 <style>
   #category-items {
