display item, category name with action

--- a/views/category/delete.ejs
+++ b/views/category/delete.ejs
@@ -1,4 +1,4 @@
-<h1>Delete Category</h1>
+<h1><%= title %></h1>
 <% if (category_items.length > 0) { %>
 <p>You need to delete the following items before attempting to delete <strong><%= category.name %></strong>:</p>
 <div id="category-items">
