--- a/views/item/delete.ejs
+++ b/views/item/delete.ejs
@@ -1,4 +1,4 @@
-<h1>Delete Item</h1>
+<h1><%= title %></h1>
 <p>Are you sure you want to delete <strong><%= item.name %></strong>?</p>
 <form method="POST">
   <button type="submit" class="submit-button">Yes</button>
