--- a/views/category/delete.ejs
+++ b/views/category/delete.ejs
@@ -15,8 +15,21 @@
 <% } else { %>
 <p>Are you sure you want to delete <strong><%= category.name %></strong>?</p>
 <form method="POST">
+  <div class="form-group">
+    <label for="password">Password:</label>
+    <input id="password" name="password" type="password" placeholder="Hint: TheOdinProject" required>
+  </div>
   <button type="submit" class="submit-button">Yes</button>
 </form>
+<% } %>
+<% if (errors !== undefined) { %>
+<div class="errors">
+  <ul>
+    <% for (let i in errors) { %>
+    <li class="error">- <%= errors[i].msg %></li>
+    <% } %>
+  </ul>
+</div>
 <% } %>
 <style>
   #category-items {
