--- a/views/category/form.ejs
+++ b/views/category/form.ejs
@@ -11,12 +11,4 @@
   <button type="submit" class="submit-button"><%= title %></button>
 </form>
 
-<% if (errors !== undefined) { %>
-<div class="errors">
-  <ul>
-    <% for (let i in errors) { %>
-    <li class="error">- <%= errors[i].msg %></li>
-    <% } %>
-  </ul>
-</div>
-<% } %>
+<%- include("../errors", { errors }); %>
