--- a/views/item/delete.ejs
+++ b/views/item/delete.ejs
@@ -7,12 +7,5 @@
   </div>
   <button type="submit" class="submit-button">Yes</button>
 </form>
-<% if (errors !== undefined) { %>
-<div class="errors">
-  <ul>
-    <% for (let i in errors) { %>
-    <li class="error">- <%= errors[i].msg %></li>
-    <% } %>
-  </ul>
-</div>
-<% } %>
+
+<%- include("../errors", { errors }); %>
