--- a/views/item/form.ejs
+++ b/views/item/form.ejs
@@ -1,5 +1,5 @@
 <h1><%= title %></h1>
-<form class="form" method="POST">
+<form class="form" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label for="name">Name:</label>
     <input id="name" name="name" type="text" placeholder="Name of item" required="true" value="<%= item===undefined ? '' : item.name %>">
@@ -24,6 +24,10 @@
       <option value=<%= categories[i]._id %> <%= selected %>><%= categories[i].name %></option>
       <% } %>
     </select>
+  </div>
+  <div class="form-group">
+    <label for="image">Image:</label>
+    <input id="image" name="image" type="file">
   </div>
   <button type="submit" class="submit-button"><%= title %></button>
 </form>
